[java11] Use readString that is utf-8 directly